# DSPRO2-FS26-Pokemon_RL

./: .env-example  .gitignore  README.md  codebase_dump.txt  dump-contents.py  main.py  mav_README.md  mysession.txt  pyproject.toml  spin_up_multiple_showdown.sh  system_log.csv  targeted_merge_diff.txt  todo.md  train_battler.py
Doc/: AI_canvas.tex  Data_Sheet.tex  Project_Proposal.tex  RL_Data_Sheet.tex  main.aux  main.out  main.tex  main.toc  project_documentation.tex
Doc/main.out/: main.tex
Doc/sections/: 00_meta.tex  01_intro.tex  01_introduction.tex  02_game_env.tex  02_game_environment.tex  03_challenge_data.tex  03_challenge_model.tex  04_milestones.tex  04_rl_framework.tex  05_architecture.tex  05_rl_setup.tex  06_implementation_snapshot.tex  06_infrastructure.tex  07_experiments.tex  07_results_roadmap.tex  08_design_questions.tex  08_results.tex  09_risk_ethics.tex  09_technical_deep_dive.tex  10_conclusions.tex  (+3 more)
data/: BDSP Trainer Data - v1.1.csv  bdsp_gauntlet_order.json  bdsp_trainers.json
models/: __init__.py  battle_transformer.py
scripts/: analyze_decision_diagnostics.py  audit_embedding_vocab.py  check_brain.py  convert_bdsp_trainers_to_json.py  diagnose_selfplay.py  generate_embedding_vocab.py  generate_gauntlet_order.py  generate_validation_team_manifest.py  hparam_sweep.py  kill_all_showdown.sh  run_dataset_validation_mlflow.py  run_trainer_validation.py  setup_custom_formats.sh  setup_training.sh  spin_up_multiple_showdown.sh  validate_bdsp_trainers.py  validate_checkpoint.py  visualize_decision_diagnostics.py
src/: action_space.py
(+71 files in other folders)
