[project]
name = "dspro2-fs26-pokemon-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium<1.2.3",
    "numpy>=2.4.3",
    "poke-env>=0.12.0",
    "python-dotenv>=1.2.2",
    "ray[rllib]>=2.54.0",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ruff>=0.15.6",
]
